// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Initial Theme Selection > should default to a dark theme when terminal background is dark and no theme is set 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Виберіть тему                                       Попередній перегляд                                            │
│ ▲                                                     ┌────────────────────────────────────────────────────────────┐ │
│    1. ANSI Dark                                       │                                                            │ │
│    2. Atom One Dark                                   │ 1 # function                                               │ │
│    3. Ayu Dark                                        │ 2 def fibonacci(n):                                        │ │
│ ●  4. Default Dark                                    │ 3     a, b = 0, 1                                          │ │
│    5. Dracula Dark                                    │ 4     for _ in range(n):                                   │ │
│    6. GitHub Dark                                     │ 5         a, b = b, a + b                                  │ │
│    7. Holiday Dark                                    │ 6     return a                                             │ │
│    8. Shades Of Purple Dark                           │                                                            │ │
│    9. ANSI Light Light (Несумісна)                    │ 1 - print("Hello, " + name)                                │ │
│   10. Ayu Light Light (Несумісна)                     │ 1 + print(f"Hello, {name}!")                               │ │
│   11. Default Light Light (Несумісна)                 │                                                            │ │
│   12. GitHub Light Light (Несумісна)                  └────────────────────────────────────────────────────────────┘ │
│ ▼                                                                                                                    │
│                                                                                                                      │
│ (Enter — вибрати, Tab — налаштувати область, Esc — закрити)                                                          │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Initial Theme Selection > should default to a light theme when terminal background is light and no theme is set 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Виберіть тему                                       Попередній перегляд                                            │
│ ▲                                                     ┌────────────────────────────────────────────────────────────┐ │
│    1. ANSI Light Light                                │                                                            │ │
│    2. Ayu Light Light                                 │ 1 # function                                               │ │
│ ●  3. Default Light Light                             │ 2 def fibonacci(n):                                        │ │
│    4. GitHub Light Light                              │ 3     a, b = 0, 1                                          │ │
│    5. Google Code Light                               │ 4     for _ in range(n):                                   │ │
│    6. Xcode Light                                     │ 5         a, b = b, a + b                                  │ │
│    7. ANSI Dark (Несумісна)                           │ 6     return a                                             │ │
│    8. Atom One Dark (Несумісна)                       │                                                            │ │
│    9. Ayu Dark (Несумісна)                            │ 1 - print("Hello, " + name)                                │ │
│   10. Default Dark (Несумісна)                        │ 1 + print(f"Hello, {name}!")                               │ │
│   11. Dracula Dark (Несумісна)                        │                                                            │ │
│   12. GitHub Dark (Несумісна)                         └────────────────────────────────────────────────────────────┘ │
│ ▼                                                                                                                    │
│                                                                                                                      │
│ (Enter — вибрати, Tab — налаштувати область, Esc — закрити)                                                          │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Initial Theme Selection > should use the theme from settings even if terminal background suggests a different theme type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Виберіть тему                                       Попередній перегляд                                            │
│ ▲                                                     ┌────────────────────────────────────────────────────────────┐ │
│ ●  1. ANSI Dark                                       │                                                            │ │
│    2. Atom One Dark                                   │ 1 # function                                               │ │
│    3. Ayu Dark                                        │ 2 def fibonacci(n):                                        │ │
│    4. Default Dark                                    │ 3     a, b = 0, 1                                          │ │
│    5. Dracula Dark                                    │ 4     for _ in range(n):                                   │ │
│    6. GitHub Dark                                     │ 5         a, b = b, a + b                                  │ │
│    7. Holiday Dark                                    │ 6     return a                                             │ │
│    8. Shades Of Purple Dark                           │                                                            │ │
│    9. ANSI Light Light (Несумісна)                    │ 1 - print("Hello, " + name)                                │ │
│   10. Ayu Light Light (Несумісна)                     │ 1 + print(f"Hello, {name}!")                               │ │
│   11. Default Light Light (Несумісна)                 │                                                            │ │
│   12. GitHub Light Light (Несумісна)                  └────────────────────────────────────────────────────────────┘ │
│ ▼                                                                                                                    │
│                                                                                                                      │
│ (Enter — вибрати, Tab — налаштувати область, Esc — закрити)                                                          │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`ThemeDialog Snapshots > should render correctly in scope selector mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Apply To                                                                                                           │
│ ● 1. User Settings                                                                                                   │
│   2. Workspace Settings                                                                                              │
│   3. System Settings                                                                                                 │
│                                                                                                                      │
│ (Enter — застосувати область, Tab — вибрати тему, Esc — закрити)                                                     │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`ThemeDialog Snapshots > should render correctly in theme selection mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ > Виберіть тему                                       Попередній перегляд                                            │
│ ▲                                                     ┌────────────────────────────────────────────────────────────┐ │
│    1. ANSI Dark                                       │                                                            │ │
│    2. ANSI Light Light                                │ 1 # function                                               │ │
│    3. Atom One Dark                                   │ 2 def fibonacci(n):                                        │ │
│    4. Ayu Dark                                        │ 3     a, b = 0, 1                                          │ │
│    5. Ayu Light Light                                 │ 4     for _ in range(n):                                   │ │
│ ●  6. Default Dark                                    │ 5         a, b = b, a + b                                  │ │
│    7. Default Light Light                             │ 6     return a                                             │ │
│    8. Dracula Dark                                    │                                                            │ │
│    9. GitHub Dark                                     │ 1 - print("Hello, " + name)                                │ │
│   10. GitHub Light Light                              │ 1 + print(f"Hello, {name}!")                               │ │
│   11. Google Code Light                               │                                                            │ │
│   12. Holiday Dark                                    └────────────────────────────────────────────────────────────┘ │
│ ▼                                                                                                                    │
│                                                                                                                      │
│ (Enter — вибрати, Tab — налаштувати область, Esc — закрити)                                                          │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
